Update ServerChanPushStrategy.java