@@ -32,13 +32,13 @@ public class ServerChanPushStrategy implements IMessagePushStrategy {
     public void pushMessage(String title, String message) {
         String token = EnvConfig.get().getServerChan();
         String u_id = EnvConfig.get().getServerChanUid();
+        System.out.println("u_id:" + u_id);
+        System.out.println("token:" + token);
         String url   = null;
         try {
-            System.out.println("u_id:" + u_id);
-            System.out.println("token:" + token);
-            // url = "https://" + u_id + ".push.ft07.com/send/" + token + ".send?title=" +
-            //         URLEncoder.encode(title, "UTF-8") +
-            //         "&desp=" + URLEncoder.encode(message, String.valueOf(StandardCharsets.UTF_8));
+            url = "https://" + u_id + ".push.ft07.com/send/" + token + ".send1?title=" +
+                    URLEncoder.encode(title, "UTF-8") +
+                    "&desp=" + URLEncoder.encode(message, String.valueOf(StandardCharsets.UTF_8));
             
             // url = "https://sctapi.ftqq.com/" + token + ".send?title=" +
             //         URLEncoder.encode(title, "UTF-8") +
